make models depend on client instead of bidirectional dependence

--- a/todo
+++ b/todo
@@ -255,6 +255,7 @@ fill architecture could work well.
 1. Hopefully fix bug where setting beat up after repeat causes weird jump
 2. Set group using same param view as others but w/ 6 notches.
 3. Shortcuts for cycling param
+4. Edit unit names
 
 Todo by priority
 ----------------
