--- a/todo
+++ b/todo
@@ -258,10 +258,11 @@ fill architecture could work well.
 4. Edit unit names
 5. Modify effects
 6. Draw params for other units in lower alpha
+7. Ongoing edits for other units in lower alpha
+8. experimental thing to draw adjacent portas 
 
 Todo by priority
 ----------------
- - ongoing edits for other units in lower alpha
  - select operations (keycmds) for other params (once those exist)
    - draw selection in param bar
  - note previews on param input
