seek in param bar

--- a/todo
+++ b/todo
@@ -260,6 +260,7 @@ fill architecture could work well.
 6. Draw params for other units in lower alpha
 7. Ongoing edits for other units in lower alpha
 8. experimental thing to draw adjacent portas 
+9. Seek in param bar
 
 Todo by priority
 ----------------
