--- a/todo
+++ b/todo
@@ -262,12 +262,15 @@ fill architecture could work well.
 8. experimental thing to draw adjacent portas 
 9. Seek in param bar
 
+7/26
+1. 
 Todo by priority
 ----------------
  - change instruments in unit
  - select operations (keycmds) for other params (once those exist)
    - draw selection in param bar
  - note previews on param input
+ - shift other params depending on the one displayed
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
      with others.
