--- a/todo
+++ b/todo
@@ -269,8 +269,8 @@ fill architecture could work well.
 
 Todo by priority
 ----------------
+ - sane velocity setting
  - note previews on param input
- - fix scroll on load
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
      with others.
@@ -311,6 +311,7 @@ Technical stuff:
  - placing notes is choppy in windows because of note preview lag. how to fix?
    wasapi? miniaudio?
  - static build
+ - scroll sometimes desyncs on ptcop load?
 
 Editor functionality:
  - echo & overdrive
