--- a/todo
+++ b/todo
@@ -271,6 +271,7 @@ fill architecture could work well.
 
 Todo by priority
 ----------------
+ - Slider for volume, buffer size.
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
      with others.
