--- a/todo
+++ b/todo
@@ -269,9 +269,17 @@ fill architecture could work well.
 4. Note previews on param input
 5. Sane velocity setting (you can only modify existing velocity events)
 
+8/8
+1. Clear last meas / repeat meas if selection is not there
+
 Todo by priority
 ----------------
  - Slider for volume, buffer size.
+ - Change instrument should have same dialog and add instr. Also it should not
+   reset selection.
+ - velocity should just by default match the previous velocity, not some random
+   base vel
+ - Rearrange units.
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
      with others.
