--- a/todo
+++ b/todo
@@ -301,8 +301,14 @@ fill architecture could work well.
 1. Add icons
 2. Slightly better buffer settings. Still bad on windows though
 
+9/19
+1. Split help menu, tooltips for icons
+
 Todo by priority
 ----------------
+ - Small user suggestions
+   - Save confirmation
+   - Show menu when selecting voice
  - Somehow get rid of the lag when note previewing on windows
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
