--- a/todo
+++ b/todo
@@ -307,10 +307,10 @@ fill architecture could work well.
 3. Save username, connection destination, port
 4. Note preview is affected by volume now
 5. Easier voice selection via menu
+6. Subtle highlight on root note
 
 Todo by priority
 ----------------
- - root note
  - measure numbers
  - midi input???
  - Somehow get rid of the lag when note previewing on windows
