--- a/todo
+++ b/todo
@@ -309,6 +309,9 @@ fill architecture could work well.
 5. Easier voice selection via menu
 6. Subtle highlight on root note
 
+9/20
+1. A few more keyboard shortcuts (pgup/dn, fn keys, 1..9)
+
 Todo by priority
 ----------------
  - measure numbers
