preview iwth changing voice now at right pitch

--- a/todo
+++ b/todo
@@ -311,6 +311,7 @@ fill architecture could work well.
 
 9/20
 1. A few more keyboard shortcuts (pgup/dn, fn keys, 1..9)
+2. Preview with changing voice is now at the right pitch
 
 Todo by priority
 ----------------
