--- a/todo
+++ b/todo
@@ -312,6 +312,7 @@ fill architecture could work well.
 9/20
 1. A few more keyboard shortcuts (pgup/dn, fn keys, 1..9)
 2. Preview with changing voice is now at the right pitch
+3. Fix tiny bug that let you delete velocity events
 
 Todo by priority
 ----------------
