--- a/todo
+++ b/todo
@@ -314,14 +314,15 @@ fill architecture could work well.
 2. Preview with changing voice is now at the right pitch
 3. Fix tiny bug that let you delete velocity events
 4. Set repeat and last flags
+5. I think note previews are fast on windows now
 
 Todo by priority
 ----------------
+ - remove blip after play
+ - highlight row on play or on input
+ - dark mode icons
  - midi input???
    - start with qwerty input
- - Somehow get rid of the lag when note previewing on windows
-   - use miniaudio or portaudio? if portaudio, would also stop having to hack
-     the stream time.
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
      with others.
