--- a/todo
+++ b/todo
@@ -331,11 +331,16 @@ fill architecture could work well.
 10/7
 1. Prepare video (thanks gkpotter, arcofdream for feedback!)
 
+10/8
+1. new session dialog
+2. scroll to start on song load, reset some other state
+
 Todo by priority
 ----------------
  - gh-pages
  - test follow
  - emit and follow other users' their playheads too
+ - connect dialog
 
  - midi input???
    - start with qwerty input
