--- a/todo
+++ b/todo
@@ -335,12 +335,12 @@ fill architecture could work well.
 1. new session dialog
 2. scroll to start on song load, reset some other state
 3. connect dialog
+4. Show ping
 
 Todo by priority
 ----------------
  - gh-pages - update style?
  - test follow, add syncing of playhead
- - ping, and show other ping (msg includes last duration)
  - emit and follow other users' their playheads too
  - cross-platform binaries
  - update thanks
