update thank you

--- a/todo
+++ b/todo
@@ -463,15 +463,16 @@ Just general format? improvements:
  - A kind of meta instrument that changes depending on parameter or pitch
 
 Running thank-you list:
-0. Pixel for making such an awesome music software!
-1. Everyone involved in ptweb!
-2. Friends and family for supporting this!
-3. jaxcheese, neozoid, steedfarmer, ewangreen for testing out with me, making
-   tunes together, and giving great feedback!
-4. steedfarmer for helping me hunt down this nasty networking bug!
-5. arcofdream for helping conceptualize the UI, giving feedback, and testing it
-   out!
-6. arcofdream, nanoplink, easynam for general programming, UX discussion and
-   consulting!
-7. jade for testing, finding UI bugs, and providing valuable suggestions!
-7. everyone in the pxtone discord servers!
+- Pixel for making such an awesome music software!
+- Everyone involved in ptweb!
+- Friends and family for supporting this!
+- jaxcheese, neozoid, steedfarmer, ewangreen for testing out with me, making
+  tunes together, and giving great feedback!
+- steedfarmer for helping me hunt down this nasty networking bug!
+- arcofdream for helping conceptualize the UI, giving feedback, and testing it
+  out!
+- arcofdream, nanoplink, easynam for general programming, UX discussion and
+  consulting!
+- jade for testing, finding UI bugs, and providing valuable suggestions!
+- gkpotter and arcofdream for helping with publicizing this!
+- everyone in the pxtone discord servers!
