--- a/todo
+++ b/todo
@@ -342,9 +342,9 @@ fill architecture could work well.
 Todo by priority
 ----------------
  - gh-pages - update style?
+ - gh-pages - thank-you section
  - test watching other users
  - cross-platform binaries
- - update thanks
  - spice up the demo song
 
  - midi input???
