--- a/todo
+++ b/todo
@@ -344,6 +344,7 @@ Todo by priority
  - gh-pages - update style?
  - gh-pages - thank-you section
  - test watching other users
+ - redo demo
  - cross-platform binaries
  - spice up the demo song
 
