--- a/todo
+++ b/todo
@@ -346,12 +346,18 @@ fill architecture could work well.
 
 10/10
 1. appimage, standardize enum sizes
+2. cleaner user list
 
 Todo by priority
 ----------------
  - test watching, recording
  - redo demo
+ - last event doesn't end song
+ - include starter kit / tutorial
+ - alt+scroll stops watch
+ - don't show your own cursor if you're watching
  - spice up demo song
+ - clean up the user list to not deselect
  - gh-pages - update style?
  - gh-pages - thank-you section
  - cross-platform binaries
