--- a/todo
+++ b/todo
@@ -355,6 +355,7 @@ Todo by priority
 ----------------
  - include starter kit / tutorial
  - test watching, recording
+ - test windows / linux
  - redo demo
  - spice up demo song
  - clean up the user list to not deselect
