--- a/todo
+++ b/todo
@@ -353,14 +353,17 @@ fill architecture could work well.
 
 Todo by priority
 ----------------
- - include starter kit / tutorial
+ - include starter kit / tutorial 
+   - ask ppl if they're willing to have their instrument packs included or a
+     sample song!
  - test watching, recording
  - test windows / linux
  - redo demo
  - spice up demo song
  - clean up the user list to not deselect
  - gh-pages - update style?
- - gh-pages - thank-you section
+ - gh-pages - thank-you section -
+    gkpotter and steedfarmer for mac build, arcofdream
  - cross-platform binaries
 
  - midi input???
