--- a/todo
+++ b/todo
@@ -355,10 +355,10 @@ fill architecture could work well.
 1. Build on mac
 2. Better help
 3. Update pages
+4. mac icons
 
 Todo by priority
 ----------------
- - mac icons
  - redo demo
  - include starter kit / tutorial 
    - ask ppl if they're willing to have their instrument packs included or a
