--- a/todo
+++ b/todo
@@ -356,14 +356,13 @@ fill architecture could work well.
 2. Better help
 3. Update pages
 4. mac icons
+5. Record again
 
 Todo by priority
 ----------------
- - redo demo
  - include starter kit / tutorial 
    - ask ppl if they're willing to have their instrument packs included or a
      sample song!
- - spice up demo song
  - gh-pages - thanks and links
 
  - midi input???
