links, better style

--- a/todo
+++ b/todo
@@ -365,6 +365,7 @@ Todo by priority
      sample song!
  - gh-pages - thanks and links
 
+ - wav export
  - midi input???
    - start with qwerty input
  - Unit view, at least for drums
