--- a/todo
+++ b/todo
@@ -365,6 +365,7 @@ fill architecture could work well.
 
 11/07
 1. mute/solo shortcuts
+2. when inputting a note, preview everything else with it
 
 Todo by priority
 ----------------
